add plugin for code cov