@@ -6,8 +6,10 @@ version := "0.1.0-SNAPSHOT"
 
 scalaVersion := "2.11.8"
 
-libraryDependencies += "org.apache.spark" %% "spark-sql" % "2.1.0"
+libraryDependencies ++= Seq(
+  "org.apache.spark" %% "spark-sql" % "2.1.0",
+  "org.scalatest" %% "scalatest" % "3.0.1" % "test",
+  "junit" % "junit" % "4.10" % "test"
+)
 
-libraryDependencies += "org.scalatest" %% "scalatest" % "3.0.1" % "test"
-
-libraryDependencies += "junit" % "junit" % "4.10" % "test"
+javaOptions ++= Seq("-Xms512M", "-Xmx2048M", "-XX:MaxPermSize=2048M")
